--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,6 +14,28 @@
     "tasks": [
         {
             "type": "shell",
+            "label": "clang++ build debug",
+            "command": "/usr/bin/clang++",
+            "args": [
+                "-std=c++17",
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
+            ],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },
+        {
+            "type": "shell",
             "label": "cl build debug",
             "command": "cl.exe",
             "args": [
